--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>Abuela's Corner</title>
   </head>
   <body>
+    <div id="welcome">
+      <h1>ABUELAZ CORNER</h1>
+      <h3>Where taste meets the myth</h3>
+    </div>
+
+    <div class="nav">
+      <div class="sidenav">
+        <a href="#welcome">Welcome</a>
+        <a href="#menu">Menu</a>
+        <a href="#order">Order</a>
+        <a href="#contact">Get In Touch</a>
+      </div>
+    </div>
+
+    <div id="menu">
+      <h3 class="card container">Freshly baked from the oven!</h3>
+      <div class="container">
+        <div class="img">
+          
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
