--- a/index.html
+++ b/index.html
@@ -34,11 +34,41 @@
 
     <form>
       <div id="order">
-        <div class="form-group">
-          
-        </div> 
+
+          <div class="form-group">
+              <label for="usr">Names:</label>
+              <input type="text" class="form-control" id="names" placeholder="Enter your names please">
+
+              <label>Email Adress:</label>
+              <input type="text" class="form-control" placeholder="Email...." id="email" >
+
+              <label id="gender">Gender</label>
+              <select name="gender">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+              </select>
+
+              <div id="place">
+                <h3 class="card container"> You can now place your oder down here.</h3>
+
+                <div id="choice">
+                  <div id="size">
+                    <label for="">Size</label>
+                    <select required class="form-control" id="sort">
+                      <option value="3">Small</option>
+                      <option value="4">Medium</option>
+                      <option value="5">Large</option>
+                    </select>
+                  </div>
+                  <div id="crust">
+                    <label for="">Crust</label>
+                    <select required class="form-control" id=""
+                  </div>
+                </div>
+              </div>
+          </div> 
       </div>
-    </form>
+  </form>
 
   </body>
 </html>
