add topping choice.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,22 @@
                   </div>
                   <div id="crust">
                     <label for="">Crust</label>
-                    <select required class="form-control" id=""
+                    <select required class="form-control" id="crusty">
+                      <option value="1" name="small">Crispy</option>
+                      <option value="2" name="medium">Stuffed</option>
+                      <option value="3" name="large">Gluten Free</option>
+                    </select>
                   </div>
+                  <div id="topping">
+                    <label for="">Toppings</label>
+                    <select required class="form-control" id="toppings">
+                      <option value="1">Onions</option>
+                      <option value="2">Spinach</option>
+                      <option value="3">Green Pepper</option>
+                      <option value="4">Mushroom</option>
+                    </select>
+                  </div>
+                  
                 </div>
               </div>
           </div> 
