add delivery choice.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,19 @@
                       <option value="4">Mushroom</option>
                     </select>
                   </div>
-                  
+                  <label>Please select the number of pizzas you would like delivered to you.</label>
+                  <select name="quantity" id="num">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                  </select>
+                  <div class="pizza-deliver">
+                    <p>Would you like your pizza to be delivered to you?</p>
+                    <label><input type="radio" name="Yes" value="yes" id="myRadio">Yes</label>
+                    <label><input type="radio" name="Yes" value="no">No</label>
+                  </div>
                 </div>
               </div>
           </div> 
