add order phrase.

--- a/index.html
+++ b/index.html
@@ -96,5 +96,10 @@
       </div>
   </form>
 
+  <div class="the-order">
+    <label>Your order is:</label>
+    <h5>A <span id="getsize"></span> sized pizza with <span id="getcrust"></span>crust and <span id="gettopping"></span></h5>
+  </div>
+
   </body>
 </html>
