add images to project folder.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,16 @@
 
   <div class="the-order">
     <label>Your order is:</label>
-    <h5>A <span id="getsize"></span> sized pizza with <span id="getcrust"></span>crust and <span id="gettopping"></span></h5>
+    <h5>A <span id="getsize"></span>RWF sized pizza with <span id="getcrust"></span>RWF crust and <span id="gettopping"></span> RWF topping</h5>
+    <h4>Total amount of money you will pay is:<span id="sum"></span>RWF</h4>
+  </div>
+
+  <div id="contact">
+    <table id="table">
+      <tr>
+        <td><img src="images/</td>
+      </tr>
+    </table>  
   </div>
 
   </body>
