change image width of image 1.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h3 class="card container">Freshly baked from the oven!</h3>
           <div class="container">
             <div class="img">
-              <img src="images/p1.jpg">
+              <img src="images/p1.jpg"width="250">
               <img src="images/p2.jpeg">
               <img src="images/p3.jpeg">
             </div>
