change nav bar style.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
 
-        <div class="nav">
+        <div id="nav">
             <div class="sidenav">
               <a href="#welcome">Welcome</a>
               <a href="#menu">Menu</a>
@@ -18,7 +18,7 @@
             </div>
           </div>
 
-          
+
         <div id="welcome">
           <h1>ABUELAZ CORNER</h1>
           <h3>Where taste meets the myth</h3>
