--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
 
 
         <div id="welcome">
-          <h1>ABUELAZ CORNER</h1>
-          <h3>Where taste meets the myth</h3>
+          <h1><strong>ABUELAZ CORNER</strong></h1>
+          <h3><strong>"Where taste meets the myth"</strong></h3>
         </div>
 
         
 
         <div id="menu">
-          <h3 class="card container">Freshly baked from the oven!</h3>
-          <div class="container">
-            <div class="img">
-              <img src="images/p1.jpg"width="250">
-              <img src="images/p2.jpeg">
-              <img src="images/p3.jpeg">
-            </div>
-          </div>
+          <!-- <div class="card container"> -->
+            <h3 >Freshly baked from the oven!</h3>
+            <!-- <div class="container"> -->
+              <div class="img">
+                <img src="images/p1.jpg"width="250">
+                <img src="images/p2.jpeg">
+                <img src="images/p3.jpeg">
+              </div>
+            <!-- </div> -->
+          <!-- </div>   -->
         </div>
 
-        <form>
-          <div id="order">
+        <div>
+          <div >
 
               <div class="form-group">
                   <label for="usr">Names:</label>
@@ -76,10 +78,10 @@
                       <div id="topping">
                         <label for="">Toppings</label>
                         <select required class="form-control" id="toppings">
-                          <option value="1">Onions</option>
-                          <option value="2">Spinach</option>
-                          <option value="3">Green Pepper</option>
-                          <option value="4">Mushroom</option>
+                          <option value="100">Onions</option>
+                          <option value="200">Spinach</option>
+                          <option value="300">Green Pepper</option>
+                          <option value="400">Mushroom</option>
                         </select>
                       </div>
                       <label>Please select the number of pizzas you would like delivered to you.</label>
@@ -99,14 +101,10 @@
                   </div>
               </div> 
           </div>
-      </form>
+          <button id="order">Submit</button>  
+        </div>
 
-      <div class="the-order">
-        <label>Your order is:</label>
-        <h5>A <span id="getsize"></span>RWF sized pizza with <span id="getcrust"></span>RWF crust and <span id="gettopping"></span> RWF topping</h5>
-        <h4>Total amount of money you will pay is:<span id="sum"></span>RWF</h4>
-      </div>
-
+      
       <div id="contact">
         <table id="table">
           <tr>
@@ -118,6 +116,6 @@
         </table>  
       </div>
     </div>  
-
+    <script src="js/script.js"></script>
   </body>
 </html>
