--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div id="menu">
           <!-- <div class="card container"> -->
-            <h3 >Freshly baked from the oven!</h3>
+            <h3 >Our Menu,freshly baked from the oven!</h3>
             <!-- <div class="container"> -->
               <div class="img">
                 <img src="images/p1.jpg"width="250">
@@ -39,7 +39,7 @@
           <!-- </div>   -->
         </div>
 
-        <div>
+        <div id="order-list">
           <div >
 
               <div class="form-group">
@@ -49,11 +49,11 @@
                   <label>Email Adress:</label>
                   <input type="text" class="form-control" placeholder="Email...." id="email" >
 
-                  <label id="gender">Gender</label>
+                  <!-- <label id="gender">Gender</label>
                   <select name="gender">
                     <option value="male">Male</option>
                     <option value="female">Female</option>
-                  </select>
+                  </select> -->
 
                   <div id="place">
                     <h3 class="card container"> You can now place your oder down here.</h3>
