add break tags to my order title.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 
         <div id="order-list">
           <div >
-
+              <br>
+              <br>
+              <h3> Please enter the required information below.</h3>
+              <br>
+              <br>
               <div class="form-group">
                   <label for="usr">Names:</label>
                   <input type="text" class="form-control" id="names" placeholder="Enter your names please">
@@ -56,7 +60,7 @@
                   </select> -->
 
                   <div id="place">
-                    <h3 class="card container"> You can now place your oder down here.</h3>
+                    
 
                     <div id="choice">
                       <div id="size">
